--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="/styles/styles.css" />
   </head>
   <body>
-    <section></section>
+    <section>
+      <div class="text">
+        <h1>Three.js is awesome</h1>
+      </div>
+    </section>
     <script src="script/three.min.js"></script>
     <script src="script/drawer.js"></script>
   </body>
