Tweak shape styling, add mix-blend-mode

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <section>
       <div class="text">
-        <h1>Three.js is awesome</h1>
+        <h1>Click and draw for fancy stuff.</h1>
       </div>
     </section>
     <script src="script/three.min.js"></script>
