Add mobile touch event listeners, add favicon, change text

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>3D Shapes mate!</title>
+    <link rel="icon" type="image/svg+xml" href="/assets/note.svg" />
+    <title>Shapes in Space</title>
     <link rel="stylesheet" href="/styles/styles.css" />
   </head>
   <body>
     <section>
       <div class="text">
-        <h1>Click and draw for fancy stuff.</h1>
+        <h1>Shapes in space.</h1>
+        <p>Click and drag for magic..</p>
       </div>
     </section>
     <script src="script/three.min.js"></script>
